--- a/bitrix24/index.html
+++ b/bitrix24/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Битрикс24 — внедрение и интеграции | AGENCY</title>
+  <title>Битрикс24 — внедрение и интеграции | Hexent</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Внедрение и реанимация Битрикс24, автоматизация процессов, интеграции с сайтами, сервисами и ботами.">
   <style>
@@ -698,7 +698,7 @@
   <div class="container nav">
     <div class="logo">
       <span class="logo-badge"></span>
-      <span>AGENCY</span>
+      <span>Hexent</span>
     </div>
     <nav class="nav-links" id="navLinks">
       <a href="/">Главная</a>
@@ -1097,7 +1097,7 @@
 
 <footer>
   <div class="container">
-    <span>© <span id="year"></span> AGENCY. Внедрение и развитие Битрикс24.</span>
+    <span>© <span id="year"></span> Hexent. Внедрение и развитие Битрикс24.</span>
     <span><a href="/" style="color: inherit;">← На главную</a></span>
   </div>
 </footer>
