--- a/Index.html
+++ b/Index.html
@@ -692,6 +692,13 @@
       flex-wrap: wrap;
     }
 
+    .footer-link {
+      color: #cbd5f5;
+      text-decoration: underline;
+      text-decoration-thickness: 1px;
+      text-underline-offset: 3px;
+    }
+
     /* Responsive */
 
     @media (max-width: 900px) {
@@ -762,7 +769,7 @@
   <div class="container nav">
     <div class="logo">
       <span class="logo-badge"></span>
-      <span>AGENCY</span>
+      <span>Hexent</span>
     </div>
     <nav class="nav-links" id="navLinks">
       <a href="#services">Услуги</a>
@@ -1174,8 +1181,11 @@
 
 <footer>
   <div class="container">
-    <span>© <span id="year"></span> AGENCY. Цифровые системы под ваш бизнес.</span>
-    <span>Хостинг: собственный VPS • HTML / CSS / JS</span>
+    <span>© <span id="year"></span> Hexent. Цифровые системы под ваш бизнес.</span>
+    <span>
+      <a class="footer-link" href="/privacy/">Политика конфиденциальности</a>
+      <span>• Хостинг: собственный VPS • HTML / CSS / JS</span>
+    </span>
   </div>
 </footer>
 
