Move Yandex Metrika to head

--- a/bitrix24/index.html
+++ b/bitrix24/index.html
@@ -5,6 +5,19 @@
   <title>Битрикс24 — внедрение и интеграции | Hexent</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Внедрение и реанимация Битрикс24, автоматизация процессов, интеграции с сайтами, сервисами и ботами.">
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript">
+      (function(m,e,t,r,i,k,a){
+          m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+          m[i].l=1*new Date();
+          for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+          k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+      })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=106394036', 'ym');
+
+      ym(106394036, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", referrer: document.referrer, url: location.href, accurateTrackBounce:true, trackLinks:true});
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/106394036" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
   <style>
     /* тот же стиль, что и на главной */
     :root {
